<resources>
    <string name="app_name">fabulous</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="home">Home</string>
    <string name="journal">Journal</string>
    <string name="statistic">Statistic</string>
    <string name="settings">Settings</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="sign_out">Sign out</string>
    <string name="hint_minute">minutes</string>
    <string name="start_focusing">start focusing</string>
    <string name="stop">Stop foucusing</string>
    <string name="message_minutes">Please Enter Minutes...</string>
    <string name="channel_name">focus channel</string>
    <string name="channel_description">notification channel for focusing mode</string>
    <string name="web_client_id">919857635268-642amlf272tnphu787qojapdp18desea.apps.googleusercontent.com</string>
    <string name="lorem_ipsum2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras feugiat, nunc eget volutpat viverra, lacus ligula venenatis nulla, in accumsan eros eros nec ipsum. Fusce eget massa id lorem blandit lobortis. Donec lacus ligula, commodo quis eleifend ac, rhoncus sed mi. </string>
    <string name="search_note">Search note</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add Url</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
</resources>