<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingHorizontal="16dp"
    android:paddingVertical="20dp"
    android:background="@drawable/bg_note"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ic_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <TextView
            android:text="@string/delete_note"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:layout_marginVertical="10dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:gravity="end"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvCancel"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:textColor="@color/colorYellow"
            android:layout_marginEnd="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvDelete"
            android:text="@string/delete"
            android:textSize="18sp"
            android:textColor="@color/colorRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>