<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/layoutAddUrlContainer"
    android:background="@color/colorGrey"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_link_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:tint="@color/colorBlack" />

    <TextView
        android:layout_width="308dp"
        android:layout_height="35dp"
        android:layout_marginHorizontal="8dp"
        android:text="@string/add_url"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toEndOf="@+id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl" />

    <EditText
        android:id="@+id/inputUrl"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_url"
        android:background="@null"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="35dp"/>
    
    <TextView
        android:id="@+id/textAdd"
        android:padding="8dp"
        android:text="@string/add"
        android:textStyle="bold"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/inputUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:padding="8dp"
        android:text="Cancel"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textAdd"
        app:layout_constraintTop_toBottomOf="@id/inputUrl" />
</androidx.constraintlayout.widget.ConstraintLayout>