<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingTop="?attr/actionBarSize"
    android:paddingEnd="10dp">

    <!--    <com.google.android.material.appbar.AppBarLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->
    <!--        <androidx.appcompat.widget.Toolbar-->
    <!--            android:id="@+id/focusToolbar"-->
    <!--            android:theme="@style/ThemeOverlay.AppCompat.Dark"-->
    <!--            android:background="@color/colorPrimaryDark"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="?attr/actionBarSize"/>-->
    <!--    </com.google.android.material.appbar.AppBarLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBarCircle"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerInParent="true"
            android:background="@drawable/drawable_circle_coundown2"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/drawable_circle_countdown"
            android:rotation="-90" />

        <EditText
            android:id="@+id/editTextMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/hint_minute"
            android:inputType="number"
            android:maxLength="15"
            android:maxLines="1"
            android:minEms="5"
            android:text="1"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorYellow" />


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarCircle"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:text="00:01:00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="40sp" />

        <Button
            android:id="@+id/btnStartFocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/start_focusing"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnStopFocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@color/colorYellow"
            android:padding="10dp"
            android:text="@string/stop"
            android:textColor="@color/colorWhite"
            android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>