<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ProfileActivity">

    <include layout="@layout/inc_toolbar_back"/>
    <include layout="@layout/inc_user_profile_card"/>
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/profileItemSettings"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_settings"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:text="@string/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/profileItemShare"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:text="@string/share_with_your_friends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/profileItemSignOut"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_logout"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <TextView
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:text="@string/sign_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>