<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:behavior_peekHeight="40dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:id="@+id/layoutMiscellaneous"
    android:orientation="vertical"
    android:background="@drawable/background_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:gravity="center"
        android:text="@string/miscellaneous"
        android:textSize="13sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <LinearLayout
        android:paddingHorizontal="10dp"
        android:paddingVertical="16dp"
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <View
                android:layout_gravity="center"
                android:id="@+id/viewColor5"
                android:background="@drawable/bg_note_color_5"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageColor5"
                android:src="@drawable/ic_baseline_check_24"
                android:padding="5dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
        >
            <View
                android:layout_gravity="center"
                android:id="@+id/viewColor1"
                android:background="@drawable/bg_note_color_1"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageColor1"
                android:padding="5dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <View
                android:layout_gravity="center"
                android:id="@+id/viewColor2"
                android:background="@drawable/bg_note_color_2"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageColor2"
                android:padding="5dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <View
                android:id="@+id/viewColor3"
                android:layout_gravity="center"
                android:background="@drawable/bg_note_color_3"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageColor3"
                android:padding="5dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>

        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            >
            <View
                android:layout_gravity="center"
                android:id="@+id/viewColor4"
                android:background="@drawable/bg_note_color_4"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <ImageView
                android:layout_gravity="center"
                android:id="@+id/imageColor4"
                android:padding="5dp"
                android:backgroundTint="@color/colorWhite"
                android:layout_width="35dp"
                android:layout_height="35dp"/>
        </FrameLayout>

        <TextView
            android:text="@string/pick_color"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_height="35dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:src="@drawable/ic_baseline_image_24"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/colorBlack"/>
        <TextView
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:text="@string/add_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <ImageView
            android:src="@drawable/link"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:tint="@color/colorBlack" />
        <TextView
            android:textSize="15sp"
            android:layout_marginStart="10dp"
            android:text="@string/add_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <ImageView
            android:src="@drawable/ic_delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:tint="@color/colorRed" />
        <TextView
            android:text="@string/delete_note"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    
</LinearLayout>