<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.CreateNoteActivity">

    <ScrollView
        android:layout_marginBottom="40dp"
        android:paddingBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageBack"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <ImageView
                android:id="@+id/imageSave"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <EditText
                android:id="@+id/edNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                android:background="@null"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:imeOptions="actionDone"
                android:paddingVertical="10dp"
                android:importantForAutofill="no"
                android:includeFontPadding="true"
                android:inputType="text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textDateTime"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@id/edNoteTitle"
                app:layout_constraintEnd_toEndOf="@id/edNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/edNoteTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edNoteSubTitle"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:paddingVertical="10dp"
                android:textSize="13sp"
                android:paddingStart="10dp"
                app:layout_constraintStart_toEndOf="@id/viewSubtitleIndicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginStart="16dp"
                android:id="@+id/viewSubtitleIndicator"
                android:background="@drawable/bg_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/edNoteSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/edNoteSubTitle"
                android:layout_width="8dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/edNoteSubTitle"/>

            <ImageView
                android:id="@+id/imgDeleteImage"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                android:layout_margin="10dp"
                android:visibility="gone"
                android:src="@drawable/ic_delete"
                android:padding="5dp"
                android:background="@drawable/bg_red_delete"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:tint="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/layoutUrl"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/imageNote"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textUrl"
                    android:layout_weight="1"
                    android:textColor="@color/colorYellow"
                    android:autoLink="web"
                    android:textSize="13sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/imgDeleteUrl"
                    android:src="@drawable/ic_delete"
                    android:padding="5dp"
                    android:background="@drawable/bg_red_delete"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:tint="@color/colorWhite" />
            </LinearLayout>

            <EditText
                android:id="@+id/edNoteContent"
                android:layout_margin="16dp"
                android:hint="@string/type_note_here"
                android:inputType="textMultiLine"
                android:minHeight="150dp"
                android:background="@null"
                android:gravity="top"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>